# kuknos-analytics

./: .env.example  .gitignore  QUICKSTART.md  README.md  USAGE.md  start.sh
backend/: pyproject.toml
backend/app/: config.py  database.py  logger.py  main.py
backend/app/routers/: buys.py  refunds.py  users.py
backend/app/schemas/: analytics.py
backend/app/services/: buys_service.py  date_utils.py  refunds_service.py  users_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChartCard.jsx  DateFilter.jsx  DbStatus.jsx  KPICard.jsx  Layout.jsx  PendingUsersTable.jsx  Sidebar.jsx
frontend/src/pages/: Buys.jsx  PlaceholderA.jsx  PlaceholderB.jsx  PlaceholderC.jsx  Refunds.jsx  UserAnalytics.jsx
frontend/src/utils/: chartDefaults.js  formatters.js
