[project]
name = "kuknos-analytics-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.25",
    "loguru>=0.7.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.3.1",
    "numpy>=2.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
